--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
          </nav>
       </div> <!-- .row -->
    </header>
-   <main role="main" id="diskography">
+
+   <h2 id="diskography">Discography</h2>
+   <main role="main">
       <div class="row">
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_self_titled.jpg" alt="Journey Disc Label"/>
-            <h2>Journey</h2>
+            <h3>Journey</h3>
             <ol>
                <li>Of a Lifetime<span class="track-length">6:54</span></li>
                <li>In the Morning Day<span class="track-length">4:27</span></li>
@@ -51,7 +53,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey_Look_Future.jpg" alt="Look Into the Future Label"/>
-            <h2>Look into the Future</h2>
+            <h3>Look into the Future</h3>
             <ol>
                <li>On a Saturday Nite<span class="track-length">4:01</span></li>
                <li>It's All Too Much<span class="track-length">4:06</span></li>
@@ -64,7 +66,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Next.jpg" alt="Journey Next Label"/>
-            <h2>Next</h2>
+            <h3>Next</h3>
             <ol>
                <li>Spaceman<span class="track-length">4:01</span></li>
                <li>People<span class="track-length">5:21</span></li>
@@ -77,7 +79,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Infinity.jpg" alt="Journey Infinity Label"/>
-            <h2>Infinity</h2>
+            <h3>Infinity</h3>
             <ol>
                <li>Lights<span class="track-length">3:11</span></li>
                <li>Feeling that Way<span class="track-length">3:28</span></li>
@@ -92,7 +94,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Evolution.jpg" alt="Journey Evolution Label"/>
-            <h2>Evolution</h2>
+            <h3>Evolution</h3>
             <ol>
                <li>Majestic<span class="track-length">1:16</span></li>
                <li>Too Late<span class="track-length">2:58</span></li>
@@ -108,7 +110,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Departure.jpg" alt="Journey Departure Label"/>
-            <h2>Departure</h2>
+            <h3>Departure</h3>
             <ol>
                <li>Any Way You Want It<span class="track-length">3:22</span></li>
                <li>Walks Like a Lady<span class="track-length">3:17</span></li>
@@ -127,7 +129,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/JourneyEscapealbumcover.jpg" alt="Journey Escape Label"/>
-            <h2>Escape</h2>
+            <h3>Escape</h3>
             <ol>
                <li>Don't Stop Believin'<span class="track-length">4:11</span></li>
                <li>Stone in Love<span class="track-length">4:26</span></li>
@@ -142,7 +144,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Jfrontiers.jpg" alt="Journey Frontiers Label"/>
-            <h2>Frontiers</h2>
+            <h3>Frontiers</h3>
             <ol>
                <li>Separate Ways (Worlds Apart)<span class="track-length">5:23</span></li>
                <li>Send Her My Love<span class="track-length">3:55</span></li>
@@ -161,7 +163,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Raised_on_Radio.jpg" alt="Journey Raised On Radio Label"/>
-            <h2>Raised On Radio</h2>
+            <h3>Raised On Radio</h3>
             <ol>
                <li>Girl Can't Help It<span class="track-length">3:50</span></li>
                <li>Positive Touch<span class="track-length">4:16</span></li>
@@ -177,7 +179,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeytrial.jpg" alt="Journey Trial By Fire Label"/>
-            <h2>Trial by Fire</h2>
+            <h3>Trial by Fire</h3>
             <ol>
                <li>Message of Love<span class="track-length">5:34</span></li>
                <li>One More<span class="track-length">5:28</span></li>
@@ -198,7 +200,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeyarrival.jpg" alt="Journey Arrival Label"/>
-            <h2>Arrival</h2>
+            <h3>Arrival</h3>
             <ol>
                <li>Higher Place<span class="track-length">5:10</span></li>
                <li>All the Way<span class="track-length">3:35</span></li>
@@ -218,7 +220,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Generations-Journey.jpg" alt="Journey Generations Label"/>
-            <h2>Generations</h2>
+            <h3>Generations</h3>
             <ol>
                <li>Faith in the Heartland<span class="track-length">6:56</span></li>
                <li>The Place in Your Heart<span class="track-length">4:20</span></li>
@@ -237,7 +239,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey-Revelation.jpg" alt="Journey Revelation Label"/>
-            <h2>Revelation</h2>
+            <h3>Revelation</h3>
             <ol>
                <li>Never Walk Away<span class="track-length">4:19</span></li>
                <li>Like a Sunshower<span class="track-length">4:29</span></li>
@@ -255,7 +257,7 @@
             </ol>
          </section>
          <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey-Eclipse.jpg" alt="Journey Eclipse Label"/>
-            <h2>Eclipse</h2>
+            <h3>Eclipse</h3>
             <ol>
                <li>City of Hope<span class="track-length">6:02</span></li>
                <li>Edge of the Moment<span class="track-length">5:27</span></li>
