changed radio buttons to be wrapped in a list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link href="/css/styles.css" type="text/css" rel="stylesheet">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-   <link href='http://fonts.googleapis.com/css?family=Abel|Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Abel%7cMerriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <body>
 <div class="wrapper container-fluid">
    <header role="banner">
@@ -350,15 +350,17 @@
 
             <div class="form-group">
                <label class="col-sm-2 control-label">Email Preference</label>
-               <input type="radio" name="email-pref" value="HTML" /> HTML<br />
-               <input type="radio" name="email-pref" value="Text" /> Text<br />
+               <ul class="email-pref">
+                  <li><input type="radio" name="email-pref" value="HTML" /> HTML</li>
+                  <li><input type="radio" name="email-pref" value="Text" /> Text</li>
+               </ul>
             </div>
 
             <div class="form-group">
                <div class="col-sm-offset-2 col-sm-10">
                   <div class="checkbox">
                      <label>
-                        <input type="checkbox">Sign up for The Journey Newsletter?
+                        <input type="checkbox"> Sign up for The Journey Newsletter?
                      </label>
                   </div>
                </div>
@@ -377,6 +379,7 @@
          <li><a href="http://www.discogs.com/artist/128395-Journey" target="_blank">discogs.com</a></li>
          <li><a href="https://www.google.com/search?q=journey+logo&amp;espv=2&amp;biw=1153&amp;bih=703&amp;tbm=isch&amp;imgil=O50TeVOS0o2o-M%253A%253BO3ia1xCcr3kfSM%253Bhttp%25253A%25252F%25252Ffr.wikipedia.org%25252Fwiki%25252FFichier%25253AJourney-logo.jpg&amp;source=iu&amp;pf=m&amp;fir=O50TeVOS0o2o-M%253A%252CO3ia1xCcr3kfSM%252C_&amp;usg=__8oPyLjgD3wojf-cX4sCgb8-9lx8%3D&amp;ved=0CDEQyjc&amp;ei=w9qtVKKOE5OdygSr8oG4CA#imgdii=O50TeVOS0o2o-M%3A%3BhI4dmiaI3DRiqM%3BO50TeVOS0o2o-M%3A&amp;imgrc=O50TeVOS0o2o-M%253A%3BO3ia1xCcr3kfSM%3Bhttp%253A%252F%252Fupload.wikimedia.org%252Fwikipedia%252Ffr%252Fb%252Fbc%252FJourney-logo.jpg%3Bhttp%253A%252F%252Ffr.wikipedia.org%252Fwiki%252FFichier%253AJourney-logo.jpg%3B300%3B105" target="_blank">google images</a></li>
          <li><a href="http://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Dpopular&amp;field-keywords=journey+&amp;rh=n%3A5174%2Ck%3Ajourney+">amazon.com</a> </li>
+         <li><a href="http://btm-inc.biz/tag/journey-band-logo">Branding Masters</a></li>
       </ul>
    </main>
 
