added class=img-responsive to images to make them responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <h2 id="diskography">Discography</h2>
    <main role="main">
       <div class="row">
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_self_titled.jpg" alt="Journey Disc Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_self_titled.jpg" class="img-responsive" alt="Journey Disc Label"/>
             <h3>Journey</h3>
             <ol>
                <li>Of a Lifetime<span class="track-length">6:54</span></li>
@@ -52,7 +52,7 @@
                <li>Mystery Mountain<span class="track-length">4:23</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey_Look_Future.jpg" alt="Look Into the Future Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey_Look_Future.jpg" class="img-responsive" alt="Look Into the Future Label"/>
             <h3>Look into the Future</h3>
             <ol>
                <li>On a Saturday Nite<span class="track-length">4:01</span></li>
@@ -65,7 +65,7 @@
                <li>I'm Gonna Leave You<span class="track-length">7:01</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Next.jpg" alt="Journey Next Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Next.jpg" class="img-responsive" alt="Journey Next Label"/>
             <h3>Next</h3>
             <ol>
                <li>Spaceman<span class="track-length">4:01</span></li>
@@ -78,7 +78,7 @@
                <li>Karma<span class="track-length">5:07</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Infinity.jpg" alt="Journey Infinity Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Infinity.jpg" class="img-responsive" alt="Journey Infinity Label"/>
             <h3>Infinity</h3>
             <ol>
                <li>Lights<span class="track-length">3:11</span></li>
@@ -93,7 +93,7 @@
                <li>Opened the Door<span class="track-length">4:37</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Evolution.jpg" alt="Journey Evolution Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Evolution.jpg" class="img-responsive" alt="Journey Evolution Label"/>
             <h3>Evolution</h3>
             <ol>
                <li>Majestic<span class="track-length">1:16</span></li>
@@ -109,7 +109,7 @@
                <li>Lady Luck<span class="track-length">3:35</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Departure.jpg" alt="Journey Departure Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey_Departure.jpg" class="img-responsive" alt="Journey Departure Label"/>
             <h3>Departure</h3>
             <ol>
                <li>Any Way You Want It<span class="track-length">3:22</span></li>
@@ -128,7 +128,7 @@
                <li>Little Girl<span class="track-length">5:47</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/JourneyEscapealbumcover.jpg" alt="Journey Escape Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/JourneyEscapealbumcover.jpg" class="img-responsive" alt="Journey Escape Label"/>
             <h3>Escape</h3>
             <ol>
                <li>Don't Stop Believin'<span class="track-length">4:11</span></li>
@@ -143,7 +143,7 @@
                <li>Open Arms<span class="track-length">3:23</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Jfrontiers.jpg" alt="Journey Frontiers Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Jfrontiers.jpg" class="img-responsive" alt="Journey Frontiers Label"/>
             <h3>Frontiers</h3>
             <ol>
                <li>Separate Ways (Worlds Apart)<span class="track-length">5:23</span></li>
@@ -162,7 +162,7 @@
                <li>Only Solutions<span class="track-length">3:33</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Raised_on_Radio.jpg" alt="Journey Raised On Radio Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Raised_on_Radio.jpg" class="img-responsive" alt="Journey Raised On Radio Label"/>
             <h3>Raised On Radio</h3>
             <ol>
                <li>Girl Can't Help It<span class="track-length">3:50</span></li>
@@ -178,7 +178,7 @@
                <li>Why Can't This Night Go on Forever<span class="track-length">3:43</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeytrial.jpg" alt="Journey Trial By Fire Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeytrial.jpg" class="img-responsive" alt="Journey Trial By Fire Label"/>
             <h3>Trial by Fire</h3>
             <ol>
                <li>Message of Love<span class="track-length">5:34</span></li>
@@ -199,7 +199,7 @@
                <li>I Can See It in Your Eyes<span class="track-length">4:12</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeyarrival.jpg" alt="Journey Arrival Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journeyarrival.jpg" class="img-responsive" alt="Journey Arrival Label"/>
             <h3>Arrival</h3>
             <ol>
                <li>Higher Place<span class="track-length">5:10</span></li>
@@ -219,7 +219,7 @@
                <li>We Will Meet Again<span class="track-length">5:06</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Generations-Journey.jpg" alt="Journey Generations Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Generations-Journey.jpg" class="img-responsive" alt="Journey Generations Label"/>
             <h3>Generations</h3>
             <ol>
                <li>Faith in the Heartland<span class="track-length">6:56</span></li>
@@ -238,7 +238,7 @@
                <li>Pride of the Family<span class="track-length">4:00</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey-Revelation.jpg" alt="Journey Revelation Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/440px-Journey-Revelation.jpg" class="img-responsive" alt="Journey Revelation Label"/>
             <h3>Revelation</h3>
             <ol>
                <li>Never Walk Away<span class="track-length">4:19</span></li>
@@ -256,7 +256,7 @@
                <li>The Place in Your Heart<span class="track-length">4:45</span></li>
             </ol>
          </section>
-         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey-Eclipse.jpg" alt="Journey Eclipse Label"/>
+         <section class="col-lg-3 col-md-4 col-sm-6 col-height"><img src="/images/Journey-Eclipse.jpg" class="img-responsive" alt="Journey Eclipse Label"/>
             <h3>Eclipse</h3>
             <ol>
                <li>City of Hope<span class="track-length">6:02</span></li>
