added class=img-responsive to band images

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
       <div>
          <h2 id="band-members">Band Members</h2>
          <section class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <img class="band-members" src="/images/steve-perry.jpg" alt="Picture of Steve Perry" />
+            <img class="band-members" src="/images/steve-perry.jpg" class="img-responsive" alt="Picture of Steve Perry" />
             <h3>Stephen Ray Perry</h3>
             <p>Born January 22, 1949 in Hanford, California, an American singer and songwriter. </p>
             <p>Former lead singer for Journey.</p>
          </section>
          <section class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <img class="band-members" src="/images/arnel-pineda.jpg" alt="Picture of Arnel Pineda" />
+            <img class="band-members" src="/images/arnel-pineda.jpg" class="img-responsive" alt="Picture of Arnel Pineda" />
             <h3>Arnel Pineda</h3>
             <p>Born September 5, 1967 in Sampaloc, Manila, Philippines. </p>
             <p>He played and recorded with several local bands before joining Journey in 2007. It was due to a Youtube video of a performance of a Journey cover song by him with one of his former bands that he received Neil Schon's attention (lead guitarist and boss of Journey). He was invited for an audition after which he was announced as the new lead singer of the band. His voice to many fans is almost identical to the band's best known previous singer Steve Perry.</p>
