--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="wrapper container-fluid">
    <header role="banner">
       <a href="/index.html" class="logo">
-         <h1><img src="/images/journey_logo4.gif" alt="Journey Logo"></h1>
+         <h1><img src="/images/journey_logo4.png" alt="Journey Logo"></h1>
       </a>
       <div class="row">
          <nav role="navigation" class="navbar navbar-default navbar-inverse">
