--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="collapse">
                <ul class="nav navbar-nav">
-                  <li><a href="#diskography">Diskography</a></li>
+                  <li><a href="#diskography">Discography</a></li>
                   <li><a href="#band-members">Band Members</a></li>
                   <li><a href="#email-newsletter">Newsletter/Contact Us</a></li>
                   <li><a href="#website-credits">Website Credits</a> </li>
