change form to be 3-6-3

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="collapse">
                <ul class="nav navbar-nav">
-                  <li><a href="#diskography">Discography</a></li>
+                  <li><a href="#discography">Discography</a></li>
                   <li><a href="#band-members">Band Members</a></li>
                   <li><a href="#email-newsletter">Newsletter/Contact Us</a></li>
                   <li><a href="#website-credits">Website Credits</a> </li>
@@ -37,7 +37,7 @@
       </div> <!-- .row -->
    </header>
 
-   <h2 id="diskography">Discography</h2>
+   <h2 id="discography">Discography</h2>
    <main role="main">
       <div class="row">
          <section class="col-lg-3 col-md-4 col-sm-6"><img src="/images/Journey_self_titled.jpg" class="img-responsive" alt="Journey Disc Label"/>
@@ -338,8 +338,7 @@
          <section class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <img class="band-members img-responsive" src="/images/steve-perry.jpg" alt="Picture of Steve Perry" />
             <h3>Stephen Ray Perry</h3>
-            <p>Born January 22, 1949 in Hanford, California, an American singer and songwriter. </p>
-            <p>Former lead singer for Journey.</p>
+            <p>Born in 1949, Steve Perry played in several bands before joining Journey in 1977. The band achieved tremendous pop rock success with its 1981 album Escape, which featured the now-classic "Don't Stop Believin'." As the group's lead singer, Perry became one of the era's most famous singers. He also had some hits on his own, including "Oh Sherrie." Perry left Journey in 1987, and except for a brief reunion, he remains a solo artist.</p>
          </section>
          <section class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <img class="band-members img-responsive" src="/images/arnel-pineda.jpg" alt="Picture of Arnel Pineda" />
@@ -356,56 +355,56 @@
          <p>Questions? Comments? Want to know more? Use the form below to send us a message and/or sign up to receive The Journey Newsletter, a free monthly email, for updates and new developments!</p>
          <form class="form-horizontal">
             <div class="form-group">
-               <label for="name" class="col-sm-2 control-label">Name</label>
-               <div class="col-sm-10">
+               <label for="name" class="col-sm-3 control-label">Name</label>
+               <div class="col-sm-6">
                   <input type="text" class="form-control" id="name" required placeholder="First & Last Name  *Required">
                </div>
             </div>
             <div class="form-group">
-               <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-               <div class="col-sm-10">
+               <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
+               <div class="col-sm-6">
                   <input type="email" class="form-control" required id="inputEmail3" placeholder="Email *Required">
                </div>
             </div>
             <div class="form-group">
-               <label for="birthday" class="col-sm-2 control-label">Birthday</label>
-               <div class="col-sm-10">
+               <label for="birthday" class="col-sm-3 control-label">Birthday</label>
+               <div class="col-sm-6">
                   <input type="date" class="form-control" id="birthday">
                </div>
             </div>
             <div class="form-group">
-               <label for="address" class="col-sm-2 control-label">Address</label>
-               <div class="col-sm-10">
+               <label for="address" class="col-sm-3 control-label">Address</label>
+               <div class="col-sm-6">
                   <input type="text" class="form-control" id="address" placeholder="Address">
                </div>
             </div>
             <div class="form-group">
-               <label for="city" class="col-sm-2 control-label">City</label>
-               <div class="col-sm-10">
+               <label for="city" class="col-sm-3 control-label">City</label>
+               <div class="col-sm-6">
                   <input type="text" class="form-control" id="city" placeholder="City">
                </div>
             </div>
             <div class="form-group">
-               <label for="state" class="col-sm-2 control-label">State</label>
-               <div class="col-sm-10">
+               <label for="state" class="col-sm-3 control-label">State</label>
+               <div class="col-sm-6">
                   <input type="text" class="form-control" id="state" placeholder="State">
                </div>
             </div>
             <div class="form-group">
-               <label for="zip" class="col-sm-2 control-label">Zip</label>
-               <div class="col-sm-10">
+               <label for="zip" class="col-sm-3 control-label">Zip</label>
+               <div class="col-sm-6">
                   <input type="number" class="form-control" id="zip" placeholder="Zip">
                </div>
             </div>
             <div class="form-group">
-               <label for="message" class="col-sm-2 control-label">Message</label>
-               <div class="col-sm-10">
+               <label for="message" class="col-sm-3 control-label">Message</label>
+               <div class="col-sm-6">
                   <textarea id="message" placeholder="Questions/Comments" class="form-control" rows="10"></textarea>
                </div>
             </div>
 
             <div class="form-group">
-               <label class="col-sm-2 control-label">Email Preference</label>
+               <label class="col-sm-3 control-label">Email Preference</label>
                <ul class="email-pref">
                   <li><input type="radio" name="email-pref" value="HTML" /> HTML</li>
                   <li><input type="radio" name="email-pref" value="Text" /> Text</li>
@@ -413,7 +412,7 @@
             </div>
 
             <div class="form-group">
-               <div class="col-sm-offset-2 col-sm-10">
+               <div class="col-sm-offset-3 col-sm-10">
                   <div class="checkbox">
                      <label>
                         <input type="checkbox"> Sign up for The Journey Newsletter?
@@ -422,7 +421,7 @@
                </div>
             </div>
             <div class="form-group">
-               <div class="col-sm-offset-2 col-sm-10">
+               <div class="col-sm-offset-3 col-sm-10">
                   <button type="submit" class="btn btn-default contact-button">Go</button>
                </div>
             </div>
