added social media and fontastic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link href="/css/styles.css" type="text/css" rel="stylesheet">
    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
    <link href='http://fonts.googleapis.com/css?family=Abel%7cMerriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <body>
 <div class="wrapper container-fluid">
@@ -442,7 +443,11 @@
    <footer role="contentinfo">
       <span class="built-by">Designed by <a href="http://iWebArchitect.me">iWebArchitect.me</a></span>
       <span class="copyright"> Copyright &copy;2015 </span>
-      <span class="footer-center">Phone 405.717.????</span>
+      <span class="menu-social" >
+            <a href="https://twitter.com/journeyofficial"><span class="screen-reader-text">Twitter</span></a>
+            <a href="https://www.facebook.com/journey"><span class="screen-reader-text">Facebook</span></a>
+
+      </span>
    </footer></div> <!-- .wrapper .container-fluid -->
 
 </body>
